Some makefile fixes

--- a/filemodule/Makefile
+++ b/filemodule/Makefile
@@ -46,18 +46,16 @@ export ROOT	:= $(CURDIR)
 
 all:
 	@[ -d $(BUILD) ] || mkdir -p $(BUILD)
-	@$(MAKE) -C ../libios -f Makefile
-	@$(MAKE) -C libfile -f Makefile.ios
-	@$(MAKE) -C libfile -f Makefile.wii
-	@$(MAKE) -C libfat -f Makefile
-	@$(MAKE) -C $(BUILD) -f $(CURDIR)/Makefile BUILDING=all
-	
+	@[ -d $(BIN) ] || mkdir -p $(BIN)
+	@$(MAKE) --no-print-directory -C ../libios
+	@$(MAKE) --no-print-directory -C libfile -f Makefile.ios
+	@$(MAKE) --no-print-directory -C libfat
+	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile BUILDING=all
 clean:
 	@echo clean ...
-	@$(MAKE) -C libfile -f Makefile.ios clean
-	@$(MAKE) -C libfile -f Makefile.wii clean
-	@$(MAKE) -C libfat -f Makefile clean
-	@rm -fr $(BUILD) $(BIN)/*.elf ../launcher/data/$(TARGET).dat
+	@$(MAKE) -C libfile clean
+	@$(MAKE) -C libfat clean
+	@rm -fr $(BUILD) $(BIN)
 else
 
 TARGET := $(notdir $(ROOT))
@@ -110,9 +108,7 @@ LDFLAGS	= -g $(ARCH) -specs=$(SPECS) -T$(LINKSCRIPT) $(LIBPATHS) $(LIBS) -Wl,-wr
 
 $(OUTPUT).elf: $(TARGET).elf
 	@echo stripping $(notdir $@)
-	@mkdir -p $(ROOT)/$(BIN)
 	@$(STRIPIOS) $< $@
-	@cp -f $@ ../../launcher/data/$(TARGET).dat
 	
 %.elf: $(OFILES) $(LIBS)
 	@echo linking $(notdir $@)
@@ -135,11 +131,8 @@ $(OUTPUT).elf: $(TARGET).elf
 	@$(bin2o)
 
 -include $(DEPENDS)
-	
-define bin2o
-	@echo  -e "\t.section .rodata\n\t.align 4\n\t.global $(*)\n\t.global $(*)_end\n$(*):\n\t.incbin \"$(subst /,\\\\\\\\,$(shell echo $< | sed 's=/==;s=/=:/='))\"\n$(*)_end:\n" > $@.s
-	@$(CC)  $(ASFLAGS) $(AFLAGS) -c $@.s -o $@
-	@rm -rf $@.s
-endef
 
 endif
+
+.DELETE_ON_ERROR:
+.SECONDARY:
