--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     - run: |
         dpkg --add-architecture i386
-        apt-get update && apt-get install -y --no-install-recommends g++ libgcc1:i386 zlib1g:i386
+        apt-get update && apt-get install -y --no-install-recommends g++ libgcc1:i386 zlib1g:i386 python2 python-yaml
       name: dependencies
     - run: make launcher -j
     - uses: actions/upload-artifact@v2
@@ -23,3 +23,4 @@ jobs:
         name: rawksd
         path: rawksd/rawk.zip
     - run: make riifs -j
+    - run: make -C rawksd/kamek
